--- a/ecommerce/ecommerce/package.json
+++ b/ecommerce/ecommerce/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.0.0",
+    "axios": "^1.6.8",
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
