--- a/ecommerce/ecommerce/package.json
+++ b/ecommerce/ecommerce/package.json
@@ -13,10 +13,15 @@
     "axios": "^1.6.8",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
+    "multiparty": "^4.2.3",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.6.0",
+    "sortablejs": "^1.15.2"
   },
   "devDependencies": {
     "eslint": "^8",
